docs/examples/pets-gateway/pets-gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: pets
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cats
  namespace: cats
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/pets
  http:
    - match:
        - uri:
            exact: /cats
      rewrite:
        uri: /
      route:
        - destination:
            host: cats
            subset: v1
            port:
              number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dogs
  namespace: dogs
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/pets
  http:
    - match:
        - uri:
            exact: /dogs
      rewrite:
        uri: /
      route:
        - destination:
            host: dogs
            subset: v1
            port:
              number: 8080
          weight: 50
        - destination:
            host: dogs
            subset: v2
            port:
              number: 8080     
          weight: 50              
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: cats
  namespace: cats
spec:
  host: cats
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: dogs
  namespace: dogs
spec:
  host: dogs
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
